[gd_scene load_steps=11 format=4 uid="uid://b5rxl6w1s1bkg"]

[ext_resource type="Shader" uid="uid://ipb88xucxfg2" path="res://Assets/Entity/Enemy/Azathoth/Laser/s_beam.tres" id="1_c6o37"]
[ext_resource type="Script" path="res://Assets/Entity/Enemy/Azathoth/Laser/laser.gd" id="1_cj5pn"]
[ext_resource type="Shader" uid="uid://x2casf3qvev6" path="res://Assets/Entity/Enemy/Azathoth/Laser/s_dish.tres" id="2_dt3y5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eu8ry"]
render_priority = 0
shader = ExtResource("1_c6o37")
shader_parameter/ColorParameter = Color(0.937255, 0, 0.231373, 1)
shader_parameter/TexturePower = 0.01
shader_parameter/EdgeFade = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_jiai6"]
_surfaces = [{
"aabb": AABB(-1, -1, 0, 2, 2, 2),
"attribute_data": PackedByteArray("//8AAP//////9wAA//f////3AAD/9////+8AAP/v////7wAA/+/////nAAD/5////+cAAP/n////3wAA/9/////fAAD/3////9cAAP/X////1wAA/9f////PAAD/z////88AAP/P////xwAA/8f////HAAD/x////78AAP+/////vwAA/7////+3AAD/t////7cAAP+3////rwAA/6////+vAAD/r////6cAAP+n////pwAA/6f///+fAAD/n////58AAP+f////lwAA/5f///+XAAD/l////48AAP+P////jwAA/4////+HAAD/h////4cAAP+H////fwAA/3////9/AAD/f////3cAAP93////dwAA/3f///9vAAD/b////28AAP9v////ZwAA/2f///9nAAD/Z////18AAP9f////XwAA/1////9XAAD/V////1cAAP9X////TwAA/0////9PAAD/T////0cAAP9H////RwAA/0f///8/AAD/P////z8AAP8/////NwAA/zf///83AAD/N////y8AAP8v////LwAA/y////8nAAD/J////ycAAP8n////HwAA/x////8fAAD/H////xcAAP8X////FwAA/xf///8PAAD/D////w8AAP8P////BwAA/wf///8HAAD/B///AAAAAAAA//8="),
"format": 34896613399,
"index_count": 192,
"index_data": PackedByteArray("AAABAAIAAgABAAMABAAFAAYABgAFAAcACAAJAAoACgAJAAsADAANAA4ADgANAA8AEAARABIAEgARABMAFAAVABYAFgAVABcAGAAZABoAGgAZABsAHAAdAB4AHgAdAB8AIAAhACIAIgAhACMAJAAlACYAJgAlACcAKAApACoAKgApACsALAAtAC4ALgAtAC8AMAAxADIAMgAxADMANAA1ADYANgA1ADcAOAA5ADoAOgA5ADsAPAA9AD4APgA9AD8AQABBAEIAQgBBAEMARABFAEYARgBFAEcASABJAEoASgBJAEsATABNAE4ATgBNAE8AUABRAFIAUgBRAFMAVABVAFYAVgBVAFcAWABZAFoAWgBZAFsAXABdAF4AXgBdAF8AYABhAGIAYgBhAGMAZABlAGYAZgBlAGcAaABpAGoAagBpAGsAbABtAG4AbgBtAG8AcABxAHIAcgBxAHMAdAB1AHYAdgB1AHcAeAB5AHoAegB5AHsAfAB9AH4AfgB9AH8A"),
"material": SubResource("ShaderMaterial_eu8ry"),
"name": "beam",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 128,
"vertex_data": PackedByteArray("/3//////K/3/f///AAAr/fiYif3//yv9+JiJ/QAAK/34mIn9//+G9/iYif0AAIb3+7BA9v//hvf7sED2AACG9/uwQPb//+zx+7BA9gAA7PEcx2zq///s8RzHbOoAAOzxHMds6v//Zewcx2zqAABl7IHagdr//2XsgdqB2gAAZeyB2oHa///45oHagdoAAPjmbOocx///+OZs6hzHAAD45mzqHMf//63hbOocxwAAreFA9vuw//+t4UD2+7AAAK3hQPb7sP//kdxA9vuwAACR3In9+Jj//5Hcif34mAAAkdyJ/fiY//+s14n9+JgAAKzX////f///rNf///9/AACs1////3///w/T////fwAAD9OJ/QZn//8P04n9BmcAAA/Tif0GZ///xs6J/QZnAADGzkD2A0///8bOQPYDTwAAxs5A9gNP///lykD2A08AAOXKbOriOP//5cps6uI4AADlymzq4jj//3zHbOriOAAAfMeB2n0l//98x4HafSUAAHzHgdp9Jf//ocSB2n0lAAChxBzHkhX//6HEHMeSFQAAocQcx5IV//9nwhzHkhUAAGfC+7C+Cf//Z8L7sL4JAABnwvuwvgn//9/A+7C+CQAA38D4mHUC///fwPiYdQIAAN/A+Jh1Av//GMD4mHUCAAAYwP9/AAD//xjA/38AAAAAGMD/fwAA//8YwP9/AAAAABjABmd1Av//GMAGZ3UCAAAYwAZndQL//9/ABmd1AgAA38ADT74J///fwANPvgkAAN/AA0++Cf//Z8IDT74JAABnwuI4khX//2fC4jiSFQAAZ8LiOJIV//+hxOI4khUAAKHEfSV9Jf//ocR9JX0lAAChxH0lfSX//3zHfSV9JQAAfMeSFeI4//98x5IV4jgAAHzHkhXiOP//5cqSFeI4AADlyr4JA0///+XKvgkDTwAA5cq+CQNP///Gzr4JA08AAMbOdQIGZ///xs51AgZnAADGznUCBmf//w/TdQIGZwAAD9MAAP9///8P0wAA/38AAA/TAAD/f///rNcAAP9/AACs13UC+Jj//6zXdQL4mAAArNd1AviY//+R3HUC+JgAAJHcvgn7sP//kdy+CfuwAACR3L4J+7D//63hvgn7sAAAreGSFRzH//+t4ZIVHMcAAK3hkhUcx///+OaSFRzHAAD45n0lgdr///jmfSWB2gAA+OZ9JYHa//9l7H0lgdoAAGXs4jhs6v//ZeziOGzqAABl7OI4bOr//+zx4jhs6gAA7PEDT0D2///s8QNPQPYAAOzxA09A9v//hvcDT0D2AACG9wZnif3//4b3BmeJ/QAAhvcGZ4n9//8r/QZnif0AACv9/3//////K/3/f///AAAr/Xc+EQN3PhEDdz4RA3c+EQOUO9YIlDvWCJQ71giUO9YI4Dg/DuA4Pw7gOD8O4Dg/Dkk2bBNJNmwTSTZsE0k2bBPCM3oYwjN6GMIzehjCM3oYPTGDHT0xgx09MYMdPTGDHa8unyKvLp8iry6fIq8unyIKLOonCizqJwos6icKLOonPimBLT4pgS0+KYEtPimBLTomizM6JoszOiaLMzomizPkIjY65CI2OuQiNjrkIjY6HB/HQRwfx0EcH8dBHB/HQbIam0qyGptKshqbSrIam0pcFUZVXBVGVVwVRlVcFUZVpA61YqQOtWKkDrVipA61YrkFjHS5BYx0uQWMdLkFjHRyC7iFcgu4hXILuIVyC7iFSR2kjkkdpI5JHaSOSR2kjrgqW5W4KluVuCpblbgqW5VkNbGaZDWxmmQ1sZpkNbGaOD4bnzg+G584PhufOD4bn8hF46LIReOiyEXjoshF46J0TDmmdEw5pnRMOaZ0TDmmfVI+qX1SPql9Uj6pfVI+qRRYCawUWAmsFFgJrBRYCaxfXa+uX12vrl9dr65fXa+ue2I9sXtiPbF7Yj2xe2I9sYRnwbOEZ8GzhGfBs4RnwbOSbEi2kmxItpJsSLaSbEi2wHHfuMBx37jAcd+4wHHfuCh3k7sod5O7KHeTuyh3k7vufHa+7nx2vu58dr7ufHa+")
}]
blend_shape_mode = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ow78u"]
render_priority = 0
shader = ExtResource("1_c6o37")
shader_parameter/ColorParameter = Color(0.937255, 0.937255, 0.937255, 1)
shader_parameter/TexturePower = 0.1
shader_parameter/EdgeFade = null

[sub_resource type="ArrayMesh" id="ArrayMesh_61olh"]
_surfaces = [{
"aabb": AABB(-1, -1, 0, 2, 2, 2),
"attribute_data": PackedByteArray("//8AAP//////9wAA//f////3AAD/9////+8AAP/v////7wAA/+/////nAAD/5////+cAAP/n////3wAA/9/////fAAD/3////9cAAP/X////1wAA/9f////PAAD/z////88AAP/P////xwAA/8f////HAAD/x////78AAP+/////vwAA/7////+3AAD/t////7cAAP+3////rwAA/6////+vAAD/r////6cAAP+n////pwAA/6f///+fAAD/n////58AAP+f////lwAA/5f///+XAAD/l////48AAP+P////jwAA/4////+HAAD/h////4cAAP+H////fwAA/3////9/AAD/f////3cAAP93////dwAA/3f///9vAAD/b////28AAP9v////ZwAA/2f///9nAAD/Z////18AAP9f////XwAA/1////9XAAD/V////1cAAP9X////TwAA/0////9PAAD/T////0cAAP9H////RwAA/0f///8/AAD/P////z8AAP8/////NwAA/zf///83AAD/N////y8AAP8v////LwAA/y////8nAAD/J////ycAAP8n////HwAA/x////8fAAD/H////xcAAP8X////FwAA/xf///8PAAD/D////w8AAP8P////BwAA/wf///8HAAD/B///AAAAAAAA//8="),
"format": 34896613399,
"index_count": 192,
"index_data": PackedByteArray("AAABAAIAAgABAAMABAAFAAYABgAFAAcACAAJAAoACgAJAAsADAANAA4ADgANAA8AEAARABIAEgARABMAFAAVABYAFgAVABcAGAAZABoAGgAZABsAHAAdAB4AHgAdAB8AIAAhACIAIgAhACMAJAAlACYAJgAlACcAKAApACoAKgApACsALAAtAC4ALgAtAC8AMAAxADIAMgAxADMANAA1ADYANgA1ADcAOAA5ADoAOgA5ADsAPAA9AD4APgA9AD8AQABBAEIAQgBBAEMARABFAEYARgBFAEcASABJAEoASgBJAEsATABNAE4ATgBNAE8AUABRAFIAUgBRAFMAVABVAFYAVgBVAFcAWABZAFoAWgBZAFsAXABdAF4AXgBdAF8AYABhAGIAYgBhAGMAZABlAGYAZgBlAGcAaABpAGoAagBpAGsAbABtAG4AbgBtAG8AcABxAHIAcgBxAHMAdAB1AHYAdgB1AHcAeAB5AHoAegB5AHsAfAB9AH4AfgB9AH8A"),
"material": SubResource("ShaderMaterial_ow78u"),
"name": "beam",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 128,
"vertex_data": PackedByteArray("/3//////K/3/f///AAAr/fiYif3//yv9+JiJ/QAAK/34mIn9//+G9/iYif0AAIb3+7BA9v//hvf7sED2AACG9/uwQPb//+zx+7BA9gAA7PEcx2zq///s8RzHbOoAAOzxHMds6v//Zewcx2zqAABl7IHagdr//2XsgdqB2gAAZeyB2oHa///45oHagdoAAPjmbOocx///+OZs6hzHAAD45mzqHMf//63hbOocxwAAreFA9vuw//+t4UD2+7AAAK3hQPb7sP//kdxA9vuwAACR3In9+Jj//5Hcif34mAAAkdyJ/fiY//+s14n9+JgAAKzX////f///rNf///9/AACs1////3///w/T////fwAAD9OJ/QZn//8P04n9BmcAAA/Tif0GZ///xs6J/QZnAADGzkD2A0///8bOQPYDTwAAxs5A9gNP///lykD2A08AAOXKbOriOP//5cps6uI4AADlymzq4jj//3zHbOriOAAAfMeB2n0l//98x4HafSUAAHzHgdp9Jf//ocSB2n0lAAChxBzHkhX//6HEHMeSFQAAocQcx5IV//9nwhzHkhUAAGfC+7C+Cf//Z8L7sL4JAABnwvuwvgn//9/A+7C+CQAA38D4mHUC///fwPiYdQIAAN/A+Jh1Av//GMD4mHUCAAAYwP9/AAD//xjA/38AAAAAGMD/fwAA//8YwP9/AAAAABjABmd1Av//GMAGZ3UCAAAYwAZndQL//9/ABmd1AgAA38ADT74J///fwANPvgkAAN/AA0++Cf//Z8IDT74JAABnwuI4khX//2fC4jiSFQAAZ8LiOJIV//+hxOI4khUAAKHEfSV9Jf//ocR9JX0lAAChxH0lfSX//3zHfSV9JQAAfMeSFeI4//98x5IV4jgAAHzHkhXiOP//5cqSFeI4AADlyr4JA0///+XKvgkDTwAA5cq+CQNP///Gzr4JA08AAMbOdQIGZ///xs51AgZnAADGznUCBmf//w/TdQIGZwAAD9MAAP9///8P0wAA/38AAA/TAAD/f///rNcAAP9/AACs13UC+Jj//6zXdQL4mAAArNd1AviY//+R3HUC+JgAAJHcvgn7sP//kdy+CfuwAACR3L4J+7D//63hvgn7sAAAreGSFRzH//+t4ZIVHMcAAK3hkhUcx///+OaSFRzHAAD45n0lgdr///jmfSWB2gAA+OZ9JYHa//9l7H0lgdoAAGXs4jhs6v//ZeziOGzqAABl7OI4bOr//+zx4jhs6gAA7PEDT0D2///s8QNPQPYAAOzxA09A9v//hvcDT0D2AACG9wZnif3//4b3BmeJ/QAAhvcGZ4n9//8r/QZnif0AACv9/3//////K/3/f///AAAr/Xc+EQN3PhEDdz4RA3c+EQOUO9YIlDvWCJQ71giUO9YI4Dg/DuA4Pw7gOD8O4Dg/Dkk2bBNJNmwTSTZsE0k2bBPCM3oYwjN6GMIzehjCM3oYPTGDHT0xgx09MYMdPTGDHa8unyKvLp8iry6fIq8unyIKLOonCizqJwos6icKLOonPimBLT4pgS0+KYEtPimBLTomizM6JoszOiaLMzomizPkIjY65CI2OuQiNjrkIjY6HB/HQRwfx0EcH8dBHB/HQbIam0qyGptKshqbSrIam0pcFUZVXBVGVVwVRlVcFUZVpA61YqQOtWKkDrVipA61YrkFjHS5BYx0uQWMdLkFjHRyC7iFcgu4hXILuIVyC7iFSR2kjkkdpI5JHaSOSR2kjrgqW5W4KluVuCpblbgqW5VkNbGaZDWxmmQ1sZpkNbGaOD4bnzg+G584PhufOD4bn8hF46LIReOiyEXjoshF46J0TDmmdEw5pnRMOaZ0TDmmfVI+qX1SPql9Uj6pfVI+qRRYCawUWAmsFFgJrBRYCaxfXa+uX12vrl9dr65fXa+ue2I9sXtiPbF7Yj2xe2I9sYRnwbOEZ8GzhGfBs4RnwbOSbEi2kmxItpJsSLaSbEi2wHHfuMBx37jAcd+4wHHfuCh3k7sod5O7KHeTuyh3k7vufHa+7nx2vu58dr7ufHa+")
}]
blend_shape_mode = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0kvvr"]
render_priority = 0
shader = ExtResource("2_dt3y5")
shader_parameter/ColorParameter = Color(1, 1, 1, 1)
shader_parameter/TexturePower = 0.01
shader_parameter/EdgeFade = 1.0

[sub_resource type="ArrayMesh" id="ArrayMesh_solrq"]
_surfaces = [{
"aabb": AABB(-2.58528, -2.58528, 0, 5.17056, 5.17056, 1),
"attribute_data": PackedByteArray("//8AAP//VFX/9wAA//dUVf/3AAD/91RV/+8AAP/vVFX/7wAA/+9UVf/nAAD/51RV/+cAAP/nVFX/3wAA/99UVf/fAAD/31RV/9cAAP/XVFX/1wAA/9dUVf/PAAD/z1RV/88AAP/PVFX/xwAA/8dUVf/HAAD/x1RV/78AAP+/VFX/vwAA/79UVf+3AAD/t1RV/7cAAP+3VFX/rwAA/69UVf+vAAD/r1RV/6cAAP+nVFX/pwAA/6dUVf+fAAD/n1RV/58AAP+fVFX/lwAA/5dUVf+XAAD/l1RV/48AAP+PVFX/jwAA/49UVf+HAAD/h1RV/4cAAP+HVFX/fwAA/39UVf9/AAD/f1RV/3cAAP93VFX/dwAA/3dUVf9vAAD/b1RV/28AAP9vVFX/ZwAA/2dUVf9nAAD/Z1RV/18AAP9fVFX/XwAA/19UVf9XAAD/V1RV/1cAAP9XVFX/TwAA/09UVf9PAAD/T1RV/0cAAP9HVFX/RwAA/0dUVf8/AAD/P1RV/z8AAP8/VFX/NwAA/zdUVf83AAD/N1RV/y8AAP8vVFX/LwAA/y9UVf8nAAD/J1RV/ycAAP8nVFX/HwAA/x9UVf8fAAD/H1RV/xcAAP8XVFX/FwAA/xdUVf8PAAD/D1RV/w8AAP8PVFX/BwAA/wdUVf8HAAD/B1RVAAAAAAAAVFX/B6qq/wf//wAAqqoAAP///wdUVf8HqqoAAFRVAACqqv8Pqqr/D////weqqv8H////D1RV/w+qqv8HVFX/B6qq/xeqqv8X////D6qq/w////8XVFX/F6qq/w9UVf8Pqqr/H6qq/x////8Xqqr/F////x9UVf8fqqr/F1RV/xeqqv8nqqr/J////x+qqv8f////J1RV/yeqqv8fVFX/H6qq/y+qqv8v////J6qq/yf///8vVFX/L6qq/ydUVf8nqqr/N6qq/zf///8vqqr/L////zdUVf83qqr/L1RV/y+qqv8/qqr/P////zeqqv83////P1RV/z+qqv83VFX/N6qq/0eqqv9H////P6qq/z////9HVFX/R6qq/z9UVf8/qqr/T6qq/0////9Hqqr/R////09UVf9Pqqr/R1RV/0eqqv9Xqqr/V////0+qqv9P////V1RV/1eqqv9PVFX/T6qq/1+qqv9f////V6qq/1f///9fVFX/X6qq/1dUVf9Xqqr/Z6qq/2f///9fqqr/X////2dUVf9nqqr/X1RV/1+qqv9vqqr/b////2eqqv9n////b1RV/2+qqv9nVFX/Z6qq/3eqqv93////b6qq/2////93VFX/d6qq/29UVf9vqqr/f6qq/3////93qqr/d////39UVf9/qqr/d1RV/3eqqv+Hqqr/h////3+qqv9/////h1RV/4eqqv9/VFX/f6qq/4+qqv+P////h6qq/4f///+PVFX/j6qq/4dUVf+Hqqr/l6qq/5f///+Pqqr/j////5dUVf+Xqqr/j1RV/4+qqv+fqqr/n////5eqqv+X////n1RV/5+qqv+XVFX/l6qq/6eqqv+n////n6qq/5////+nVFX/p6qq/59UVf+fqqr/r6qq/6////+nqqr/p////69UVf+vqqr/p1RV/6eqqv+3qqr/t////6+qqv+v////t1RV/7eqqv+vVFX/r6qq/7+qqv+/////t6qq/7f///+/VFX/v6qq/7dUVf+3qqr/x6qq/8f///+/qqr/v////8dUVf/Hqqr/v1RV/7+qqv/Pqqr/z////8eqqv/H////z1RV/8+qqv/HVFX/x6qq/9eqqv/X////z6qq/8/////XVFX/16qq/89UVf/Pqqr/36qq/9/////Xqqr/1////99UVf/fqqr/11RV/9eqqv/nqqr/5////9+qqv/f////51RV/+eqqv/fVFX/36qq/++qqv/v////56qq/+f////vVFX/76qq/+dUVf/nqqr/96qq//f////vqqr/7/////dUVf/3qqr/71RV/++qqv//qqr///////eqqv/3/////1RV//+qqv/3VFX/96qq"),
"format": 34896613399,
"index_count": 576,
"index_data": PackedByteArray("AAABAAIAAgABAAMABAAFAAYABgAFAAcACAAJAAoACgAJAAsADAANAA4ADgANAA8AEAARABIAEgARABMAFAAVABYAFgAVABcAGAAZABoAGgAZABsAHAAdAB4AHgAdAB8AIAAhACIAIgAhACMAJAAlACYAJgAlACcAKAApACoAKgApACsALAAtAC4ALgAtAC8AMAAxADIAMgAxADMANAA1ADYANgA1ADcAOAA5ADoAOgA5ADsAPAA9AD4APgA9AD8AQABBAEIAQgBBAEMARABFAEYARgBFAEcASABJAEoASgBJAEsATABNAE4ATgBNAE8AUABRAFIAUgBRAFMAVABVAFYAVgBVAFcAWABZAFoAWgBZAFsAXABdAF4AXgBdAF8AYABhAGIAYgBhAGMAZABlAGYAZgBlAGcAaABpAGoAagBpAGsAbABtAG4AbgBtAG8AcABxAHIAcgBxAHMAdAB1AHYAdgB1AHcAeAB5AHoAegB5AHsAfAB9AH4AfgB9AH8AgACBAIIAggCBAIMAhACFAIYAhgCFAIcAiACJAIoAigCJAIsAjACNAI4AjgCNAI8AkACRAJIAkgCRAJMAlACVAJYAlgCVAJcAmACZAJoAmgCZAJsAnACdAJ4AngCdAJ8AoAChAKIAogChAKMApAClAKYApgClAKcAqACpAKoAqgCpAKsArACtAK4ArgCtAK8AsACxALIAsgCxALMAtAC1ALYAtgC1ALcAuAC5ALoAugC5ALsAvAC9AL4AvgC9AL8AwADBAMIAwgDBAMMAxADFAMYAxgDFAMcAyADJAMoAygDJAMsAzADNAM4AzgDNAM8A0ADRANIA0gDRANMA1ADVANYA1gDVANcA2ADZANoA2gDZANsA3ADdAN4A3gDdAN8A4ADhAOIA4gDhAOMA5ADlAOYA5gDlAOcA6ADpAOoA6gDpAOsA7ADtAO4A7gDtAO8A8ADxAPIA8gDxAPMA9AD1APYA9gD1APcA+AD5APoA+gD5APsA/AD9AP4A/gD9AP8AAAEBAQIBAgEBAQMBBAEFAQYBBgEFAQcBCAEJAQoBCgEJAQsBDAENAQ4BDgENAQ8BEAERARIBEgERARMBFAEVARYBFgEVARcBGAEZARoBGgEZARsBHAEdAR4BHgEdAR8BIAEhASIBIgEhASMBJAElASYBJgElAScBKAEpASoBKgEpASsBLAEtAS4BLgEtAS8BMAExATIBMgExATMBNAE1ATYBNgE1ATcBOAE5AToBOgE5ATsBPAE9AT4BPgE9AT8BQAFBAUIBQgFBAUMBRAFFAUYBRgFFAUcBSAFJAUoBSgFJAUsBTAFNAU4BTgFNAU8BUAFRAVIBUgFRAVMBVAFVAVYBVgFVAVcBWAFZAVoBWgFZAVsBXAFdAV4BXgFdAV8BYAFhAWIBYgFhAWMBZAFlAWYBZgFlAWcBaAFpAWoBagFpAWsBbAFtAW4BbgFtAW8BcAFxAXIBcgFxAXMBdAF1AXYBdgF1AXcBeAF5AXoBegF5AXsBfAF9AX4BfgF9AX8B"),
"material": SubResource("ShaderMaterial_0kvvr"),
"name": "dish",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 384,
"vertex_data": PackedByteArray("/3//////p/7/f9XlJpKn/viYif3//6f+3ZPg4yaSp/74mIn9///7+92T4OMmkvv7+7BA9v//+/v4phTeJpL7+/uwQPb//1j5+KYU3iaSWPkcx2zq//9Y+ZO4q9Qmklj5HMds6v//w/aTuKvUJpLD9oHagdr//8P2AcgByCaSw/aB2oHa//9D9AHIAcgmkkP0bOocx///Q/Sr1JO4JpJD9GzqHMf//93xq9STuCaS3fFA9vuw///d8RTe+KYmkt3xQPb7sP//mO8U3vimJpKY74n9+Jj//5jv4OPdkyaSmO+J/fiY//957eDj3ZMmknnt////f///ee3V5f9/JpJ57f///3///4Tr1eX/fyaShOuJ/QZn//+E6+DjIWwmkoTrif0GZ///wung4yFsJpLC6UD2A0///8LpFN4GWSaSwulA9gNP//806BTeBlkmkjTobOriOP//NOir1GtHJpI06Gzq4jj//+Hmq9RrRyaS4eaB2n0l///h5gHI/TcmkuHmgdp9Jf//zeUByP03JpLN5RzHkhX//83lk7hTKyaSzeUcx5IV///65JO4Uysmkvrk+7C+Cf//+uT4puohJpL65Puwvgn//2zk+KbqISaSbOT4mHUC//9s5N2THhwmkmzk+Jh1Av//JeTdkx4cJpIl5P9/AAD//yXk/38pGiaSJeT/fwAA//8l5P9/KRomkiXkBmd1Av//JeQhbB4cJpIl5AZndQL//2zkIWweHCaSbOQDT74J//9s5AZZ6iEmkmzkA0++Cf//+uQGWeohJpL65OI4khX///rka0dTKyaS+uTiOJIV///N5WtHUysmks3lfSV9Jf//zeX9N/03JpLN5X0lfSX//+Hm/Tf9NyaS4eaSFeI4///h5lMra0cmkuHmkhXiOP//NOhTK2tHJpI06L4JA0///zTo6iEGWSaSNOi+CQNP///C6eohBlkmksLpdQIGZ///wukeHCFsJpLC6XUCBmf//4TrHhwhbCaShOsAAP9///+E6yka/38mkoTrAAD/f///ee0pGv9/JpJ57XUC+Jj//3ntHhzdkyaSee11AviY//+Y7x4c3ZMmkpjvvgn7sP//mO/qIfimJpKY774J+7D//93x6iH4piaS3fGSFRzH///d8VMrk7gmkt3xkhUcx///Q/RTK5O4JpJD9H0lgdr//0P0/TcByCaSQ/R9JYHa///D9v03AcgmksP24jhs6v//w/ZrR6vUJpLD9uI4bOr//1j5a0er1CaSWPkDT0D2//9Y+QZZFN4mklj5A09A9v//+/sGWRTeJpL7+wZnif3///v7IWzg4yaS+/sGZ4n9//+n/iFs4OMmkqf+/3//////p/7/f9XlJpKn/jxxN8oQOyz/VnaOsAAALP//f6vLEDss//9/grEAACz/IWzg4yaS3f48cTfKEDvd/v9/1eUmkt3+/3+ryxA73f4KY+nFEDuK/Q1tva0AAIr9PHE3yhA7iv1Wdo6wAACK/QZZFN4mkpv8CmPpxRA7m/whbODjJpKb/DxxN8oQO5v89FXqvhA77vt9ZCqpAADu+wpj6cUQO+77DW29rQAA7vtrR6vUJpJi+vRV6r4QO2L6BlkU3iaSYvoKY+nFEDti+n1KgbUQO1v6/VwBowAAW/r0Veq+EDtb+n1kKqkAAFv6/TcByCaSNfh9SoG1EDs1+GtHq9QmkjX49FXqvhA7NfgUQQqqEDvV+NRWgZsAANX4fUqBtRA71fj9XAGjAADV+FMrk7gmkhr2FEEKqhA7Gvb9NwHIJpIa9n1KgbUQOxr2FTr0nBA7YfdBUvGSAABh9xRBCqoQO2H31FaBmwAAYffqIfimJpIX9BU69JwQOxf0UyuTuCaSF/QUQQqqEDsX9Mc1wo4QOwH2cE+oiQAAAfYVOvScEDsB9kFS8ZIAAAH2HhzdkyaSL/LHNcKOEDsv8uoh+KYmki/yFTr0nBA7L/JTNP9/EDu69HxO/38AALr0xzXCjhA7uvRwT6iJAAC69Cka/38mkmfwUzT/fxA7Z/AeHN2TJpJn8Mc1wo4QO2fwxzU8cRA7jvNwT1Z2AACO81M0/38QO47zfE7/fwAAjvMeHCFsJpLF7sc1PHEQO8XuKRr/fyaSxe5TNP9/EDvF7hU6CmMQO4DyQVINbQAAgPLHNTxxEDuA8nBPVnYAAIDy6iEGWSaSTO0VOgpjEDtM7R4cIWwmkkztxzU8cRA7TO0UQfRVEDuT8dRWfWQAAJPxFToKYxA7k/FBUg1tAACT8VMra0cmkgHsFEH0VRA7AezqIQZZJpIB7BU6CmMQOwHsfUp9ShA7yfD9XP1cAADJ8BRB9FUQO8nw1FZ9ZAAAyfD9N/03JpLm6n1KfUoQO+bqUytrRyaS5uoUQfRVEDvm6vRVFEEQOyXwfWTUVgAAJfB9Sn1KEDsl8P1c/VwAACXwa0dTKyaSAOr0VRRBEDsA6v03/TcmkgDqfUp9ShA7AOoKYxU6EDup7w1tQVIAAKnv9FUUQRA7qe99ZNRWAACp7wZZ6iEmklLpCmMVOhA7UulrR1MrJpJS6fRVFEEQO1LpPHHHNRA7Ve9WdnBPAABV7wpjFToQO1XvDW1BUgAAVe8hbB4cJpLc6DxxxzUQO9zoBlnqISaS3OgKYxU6EDvc6P9/UzQQOyzv/398TgAALO88ccc1EDss71Z2cE8AACzv/38pGiaSoej/f1M0EDuh6CFsHhwmkqHoPHHHNRA7oejCjsc1EDss76iJcE8AACzv/39TNBA7LO//f3xOAAAs792THhwmkqHowo7HNRA7oej/fykaJpKh6P9/UzQQO6Ho9JwVOhA7Ve/xkkFSAABV78KOxzUQO1XvqIlwTwAAVe/4puohJpLc6PScFToQO9zo3ZMeHCaS3OjCjsc1EDvc6AqqFEEQO6nvgZvUVgAAqe/0nBU6EDup7/GSQVIAAKnvk7hTKyaSUukKqhRBEDtS6fim6iEmklLp9JwVOhA7UumBtX1KEDsl8AGj/VwAACXwCqoUQRA7JfCBm9RWAAAl8AHI/TcmkgDqgbV9ShA7AOqTuFMrJpIA6gqqFEEQOwDq6r70VRA7yfAqqX1kAADJ8IG1fUoQO8nwAaP9XAAAyfCr1GtHJpLm6uq+9FUQO+bqAcj9NyaS5uqBtX1KEDvm6unFCmMQO5Pxva0NbQAAk/HqvvRVEDuT8SqpfWQAAJPxFN4GWSaSAezpxQpjEDsB7KvUa0cmkgHs6r70VRA7Aew3yjxxEDuA8o6wVnYAAIDy6cUKYxA7gPK9rQ1tAACA8uDjIWwmkkztN8o8cRA7TO0U3gZZJpJM7enFCmMQO0ztq8v/fxA7jvOCsf9/AACO8zfKPHEQO47zjrBWdgAAjvPV5f9/JpLF7qvL/38QO8Xu4OMhbCaSxe43yjxxEDvF7jfKwo4QO7r0jrCoiQAAuvSry/9/EDu69IKx/38AALr04OPdkyaSZ/A3ysKOEDtn8NXl/38mkmfwq8v/fxA7Z/DpxfScEDsB9r2t8ZIAAAH2N8rCjhA7AfaOsKiJAAAB9hTe+KYmki/y6cX0nBA7L/Lg492TJpIv8jfKwo4QOy/y6r4KqhA7YfcqqYGbAABh9+nF9JwQO2H3va3xkgAAYfer1JO4JpIX9Oq+CqoQOxf0FN74piaSF/TpxfScEDsX9IG1gbUQO9X4AaMBowAA1fjqvgqqEDvV+CqpgZsAANX4AcgByCaSGvaBtYG1EDsa9qvUk7gmkhr26r4KqhA7GvYKquq+EDtb+oGbKqkAAFv6gbWBtRA7W/oBowGjAABb+pO4q9QmkjX4CqrqvhA7NfgByAHIJpI1+IG1gbUQOzX49JzpxRA77vvxkr2tAADu+wqq6r4QO+77gZsqqQAA7vv4phTeJpJi+vSc6cUQO2L6k7ir1CaSYvoKquq+EDti+sKON8oQO4r9qImOsAAAiv30nOnFEDuK/fGSva0AAIr93ZPg4yaSm/zCjjfKEDub/PimFN4mkpv89JzpxRA7m/z/f6vLEDss//9/grEAACz/wo43yhA7LP+oiY6wAAAs//9/1eUmkt3+/3+ryxA73f7dk+DjJpLd/sKON8oQO93+FFt5BBRbeQQUW3kEFFt5BBJVngwSVZ4MElWeDBJVngyqT/QTqk/0E6pP9BOqT/QTrUq4Gq1KuBqtSrgarUq4GvlFGCH5RRgh+UUYIflFGCFzQTsnc0E7J3NBOydzQTsnAz1ALQM9QC0DPUAtAz1ALZI4RTOSOEUzkjhFM5I4RTMKNGs5CjRrOQo0azkKNGs5Uy/PP1Mvzz9TL88/Uy/PP1EqmkZRKppGUSqaRlEqmkbhJPpN4ST6TeEk+k3hJPpN1R4tVtUeLVbVHi1W1R4tVu4Xi1/uF4tf7heLX+4Xi1/OD49qzg+Pas4Pj2rOD49q5QUAeOUFAHjlBQB45QUAeP8H5IX/B+SF/wfkhf8H5IVvFc2PbxXNj28VzY9vFc2PdCDtl3Qg7Zd0IO2XdCDtl9Ip1Z7SKdWe0inVntIp1Z4EMuGkBDLhpAQy4aQEMuGkZTlRqmU5UaplOVGqZTlRqi9AU68vQFOvL0BTry9AU6+URgq0lEYKtJRGCrSURgq0uUyRuLlMkbi5TJG4uUyRuL9SAr2/UgK9v1ICvb9SAr3EWHPBxFhzwcRYc8HEWHPB5175xede+cXnXvnF5175xUdlrMpHZazKR2WsykdlrMoLbKnPC2ypzwtsqc8LbKnPYHMS1WBzEtVgcxLVYHMS1YV7E9uFexPbhXsT24V7E9sAe63lAHut5QB7reUAe63lUns131J7Nd9SezXfUns13wRyP94Ecj/eBHI/3gRyP97YcqnY2HKp2NhyqdjYcqnYCmqn1wpqp9cKaqfXCmqn10FrztJBa87SQWvO0kFrztLIYqfRyGKn0chip9HIYqfRS2RtzUtkbc1LZG3NS2RtzQVcEMwFXBDMBVwQzAVcEMzCXWLIwl1iyMJdYsjCXWLIl1XAxpdVwMaXVcDGl1XAxoFXjsOBV47DgVeOw4FXjsNZT5fBWU+XwVlPl8FZT5fBZFHWvmRR1r5kUda+ZFHWvixJfLwsSXy8LEl8vCxJfLxNSyO6TUsjuk1LI7pNSyO68UJVt/FCVbfxQlW38UJVtx5FXLUeRVy1HkVctR5FXLWIPAiyiDwIsog8CLKIPAiytj5qsLY+arC2Pmqwtj5qsMw1eKzMNXiszDV4rMw1eKzxNy+r8Tcvq/E3L6vxNy+rlS6BppUugaaVLoGmlS6BpqAwiaWgMImloDCJpaAwiaWqJvafqib2n6om9p+qJvafiShKn4koSp+JKEqfiShKn8QdmpjEHZqYxB2amMQdmphaHzSYWh80mFofNJhaHzSYeBMYkHgTGJB4ExiQeBMYkKEU7I+hFOyPoRTsj6EU7I8uB++FLgfvhS4H74UuB++FpwfohacH6IWnB+iFpwfohe8F0HjvBdB47wXQeO8F0HjpBVd46QVXeOkFV3jpBVd4GRCGbBkQhmwZEIZsGRCGbO0PXmvtD15r7Q9ea+0PXmubGDtimxg7YpsYO2KbGDtiNRikYDUYpGA1GKRgNRikYPYfVFn2H1RZ9h9UWfYfVFlLH3ZXSx92V0sfdldLH3ZXgSZqUYEmalGBJmpRgSZqUYolX0+KJV9PiiVfT4olX095LDJKeSwySnksMkp5LDJKMCsOSDArDkgwKw5IMCsOSAkyd0MJMndDCTJ3Qwkyd0NqMEhBajBIQWowSEFqMEhBVjcOPVY3Dj1WNw49VjcOPV014DpdNeA6XTXgOl014Dp9PNI2fTzSNn080jZ9PNI2IzqxNCM6sTQjOrE0IzqxNJdBpTCXQaUwl0GlMJdBpTDWPpou1j6aLtY+mi7WPpouwEZoKsBGaCrARmgqwEZoKo9DfiiPQ34oj0N+KI9DfigRTPojEUz6IxFM+iMRTPojY0g8ImNIPCJjSDwiY0g8IqdRNx2nUTcdp1E3HadRNx1tTbQbbk20G25NtBtuTbQbqFf1FahX9RWoV/UVqFf1Fc5SvRTOUr0UzlK9FM5SvRQ/XvoNP176DT9e+g0/XvoNqlgnDapYJw2qWCcNqlgnDa1l/gStZf4ErWX+BK1l/gQ2X60ENV+tBDVfrQQ1X60E")
}]
blend_shape_mode = 0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_03jqg"]
radius = 1.0

[node name="Laser" type="Node3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_cj5pn")

[node name="BeamMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_jiai6")

[node name="InnerBeamMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("ArrayMesh_61olh")

[node name="DishMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_solrq")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 100)
collision_mask = 3
collide_with_areas = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 1)
shape = SubResource("CylinderShape3D_03jqg")
